Fix ios 18 chrom web app has extra white space at the bottom of pages

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -4,6 +4,10 @@
 
 [x-cloak] { display: none !important; }
 
+body {
+  min-height: -webkit-fill-available;
+}
+
 .active {
   @apply text-tomato;
 }
